--- a/contacts/index.html
+++ b/contacts/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>ГКОУ РО "Ростовская специальная школа-интернат №48"</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="/assets/styles/main.css">
+    <script src="/assets/js/badeye.js"></script>
+
 </head>
 
-<body>
+<body class="body">
     <header>
+    <div class="badeye" id="badeye">
+
+    <button id="font_normal" class="btn" onclick="Normal()"> </button>
+
+    <button id="font_middle" class="btn" onclick="Middle()"></button>
+
+    <button id="font_big" class="btn" onclick="Big()"></button>
+
+    <div class="w-b"><label class="label">Фон</label><button id="fon-color" class="btn" onclick="Black()">чёрный</button></div>
+
+    <div class="h-s"><label class="label">Изображения</label><button id="hide-img" class="btn" onclick="Hide()">скрыть</button></div>
+
+    <button id="back" class="btn" onclick="Back()">к обычной версии</button>
+
+</div>
 
      <nav class="menu-top">
      <ul>
@@ -73,21 +90,25 @@
  </nav>
 
 
-    <div class="eye"><a href="#">Версия для слабовидящих</a> </div>
-
-    <div class="hero">
-        <div class="avatar">
-
-        </div>
-        <div class="title">
-            <p class="short">Ростовская специальная школа-интернат №48</p>
-            <p class="full">Государственное казенное общеобразовательное учреждение Ростовской области</p>
-        </div>
+    <div class="tobadeye" id="tobadeye" onclick="Badeye()"></div>
+   <!-- <div class="eye"><a href="#">Версия для слабовидящих</a> </div>-->
+       
+<div class="hero">
+    <div class="avatar"></div>
+    <div class="title">
+        <p class="short">Ростовская специальная школа-интернат №48</p>
+        <p class="full">Государственное казенное общеобразовательное учреждение Ростовской области</p>
     </div>
+
+</div>
+
+
 </header>
 
 
-   <h1>Контакты</h1>
+   <main class="contacts">
+<h1>Контакты</h1>
+</main>
 
     <footer>
          <nav class="menu-bottom">
@@ -163,5 +184,9 @@
          <div class="logo">ГКОУ РО "Ростовская специальная школа-интернат №48"</div>
     </footer>
 
+
+    <script>
+       init();
+    </script>
 </body>
 </html>
