--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>ГКОУ РО "Ростовская специальная школа-интернат №48"</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="/assets/styles/main.css">
+    <script src="/assets/js/badeye.js"></script>
+
 </head>
 
-<body>
+<body class="body">
     <header>
+    <div class="badeye" id="badeye">
+
+    <button id="font_normal" class="btn" onclick="Normal()"> </button>
+
+    <button id="font_middle" class="btn" onclick="Middle()"></button>
+
+    <button id="font_big" class="btn" onclick="Big()"></button>
+
+    <div class="w-b"><label class="label">Фон</label><button id="fon-color" class="btn" onclick="Black()">чёрный</button></div>
+
+    <div class="h-s"><label class="label">Изображения</label><button id="hide-img" class="btn" onclick="Hide()">скрыть</button></div>
+
+    <button id="back" class="btn" onclick="Back()">к обычной версии</button>
+
+</div>
 
      <nav class="menu-top">
      <ul>
@@ -73,53 +90,45 @@
  </nav>
 
 
-    <div class="eye"><a href="#">Версия для слабовидящих</a> </div>
-
-    <div class="hero">
-        <div class="avatar">
-
-        </div>
-        <div class="title">
-            <p class="short">Ростовская специальная школа-интернат №48</p>
-            <p class="full">Государственное казенное общеобразовательное учреждение Ростовской области</p>
-        </div>
+    <div class="tobadeye" id="tobadeye" onclick="Badeye()"></div>
+   <!-- <div class="eye"><a href="#">Версия для слабовидящих</a> </div>-->
+       
+<div class="hero">
+    <div class="avatar"></div>
+    <div class="title">
+        <p class="short">Ростовская специальная школа-интернат №48</p>
+        <p class="full">Государственное казенное общеобразовательное учреждение Ростовской области</p>
     </div>
+
+</div>
+
+
 </header>
 
 
-       <main class="index">
+       <main>
         <div class="note">
-            <div>
+
                 <p>  Ростовская школа-интернат была открыта 1   сентября 1950 года на основании решения №951 от 03 августа 1950 г. Исполнительного комитета Ростовского-на-Дону городского Совета депутатов трудящихся как школа-интернат для глухонемых детей.
                     <br />
 
                     <br />
                     &nbsp; &nbsp; На основании решения психолого-медико-педагогической комиссии в школу-интернат принимаются слабослышащие, имеющие частичную потерю слуха и различную степень недоразвития речи, позднооглохшие в дошкольном или школьном возрасте, но сохранившие речь.
                     <br />
-
+                </p>
                     <br />
-                    &nbsp; &nbsp; <b>Образовательное учреждение дает основное общее образование </b><b><span style="line-height: 18px;">по двум уровням: начальное общее образование - 2 уровень; основное общее образование - 3 уровень</span></b>. Форма обучения - очная. Нормативные сроки обучения: 10-11 лет.  Для воспитанников организовано 6-ти разовое питание, для приходящих обучающихся 2-х разовое. </p>
+            <blockquote>
+                    &nbsp; &nbsp; <b>Образовательное учреждение дает основное общее образование </b>
+                    <b><span style="line-height: 18px;">по двум уровням: начальное общее образование - 2 уровень; основное общее
+                        образование - 3 уровень</span></b>.
+                    Форма обучения - очная. Нормативные сроки обучения: 10-11 лет.
+                    Для воспитанников организовано 6-ти разовое питание, для приходящих обучающихся 2-х разовое.
+            </blockquote>
 
-                <p>Преподавание ведётся на русском языке.<span style="line-height: 1.5em;">    </span></p>
+                <cite>Преподавание ведётся на русском языке.</cite>
 
                 <p>В соответствии с приказом минобразования Ростовской области от 25.07.2014 № 490 ОУ является пилотной площадкой по подготовке к переходу на федеральные государственные образовательные стандарты начального общего образования детей с ограниченными возможностями здоровья 2014-2015 учебный год.</p>
-
-                <p>  В учреждении работает высокопрофессиональный творческий коллектив педагогов под руководством <b>директора, заслуженного учителя РФ Маетной Раисы Ивановны</b>. В его составе <b>1</b><strong> заслуженный учитель, 30 учителей высшей категории, 21 учителей первой категории, 3 почетных работника общего образования, 1 отличник просвещения СССР, 3 отличника народного просвещения РФ.</strong> 3 учителя награждены Грамотой Министерства Образования России, 1 медалью &laquo;За трудовую доблесть&raquo;, &quot;За доблестный труд на благо Донского края&quot; - 1 чел., &quot;Почетный работник общего образования РФ&quot; - 3 чел., Благодарственным письмом минобр РО - 28 чел. Благодарственным письмом Законодательного Собрания РО - 1 чел. 2 учителя -лауреаты конкурса лучших учителей образовательных учреждений в рамках приоритетного национального проекта «Образование» Премия Губернатора РО. Педколлектив осуществляет единую комплексную систему обучения, воспитания и развития, обеспечивающую адекватный психофизическим особенностям обучающихся уровень образования. Специальная образовательная программа направлена на развитие слухового восприятия, формирование словесной речи. Коррекционная работа с детьми осуществляется на индивидуальных занятиях с помощью специальной методики и системы упражнений при опоре на остаточный слух и произносительные возможности.  </p>
-
-                <p> &nbsp; &nbsp; Образовательное учреждение занимает первое место в рейтинге 2010, 2011 и 2012 г.г. среди ОУ региона. В 2013 году 3-е место. Является федеральной экспериментальной площадкой Федерального института развития образования по сопровождению инклюзивного образования, имеет статус областной экспериментальной площадки. </p>
-
-                <p> &nbsp; &nbsp; Обучающимся, воспитанникам предоставлена возможность развивать свои способности в творческих студиях (ИЗО, хореография, рукоделие), в спортивных секциях, кружках (тхэквондо, шахматы, шашки, футбол, настольный теннис). Дети &ndash; участники и победители многих конкурсов, фестивалей, спортивных соревнований. Оптимальные условия жизни в образовательном учреждении создают ребенку-инвалиду предпосылки для успешного и гармоничного развития.</p>
-
-
-
-                <p> &nbsp; &nbsp; В учебную программу по физкультуре введены лечебно-оздоровительные занятия, где ребята получают общие представления о культуре дыхания, движения, правильном питании, системе закаливания, занятия осуществляются в спортивно-оздоровительном комплексе с применением тренажеров, мини-бассейна. </p>
-
-                <p> &nbsp; &nbsp; Школа богата традициями: праздники с участием детей, педагогов, родителей, дни здоровья. Яркие концерты, внеурочные мероприятия дают возможность раскрыться детским талантам, получить эмоциональный заряд, оценить свои творческие способности. </p>
-
-                <p> &nbsp; &nbsp; В школе-интернате создан Попечительский совет, в состав которого вошли представители бизнеса, науки, образования города. Попечительский совет оказывает помощь в организации учебно-воспитательного процесса, укреплении материально-технической базы учреждения.</p>
-
-                <p> Выпускники образовательного учреждения учатся в средних специальных и высших учебных заведениях Москвы, Санкт-Петербурга, Ростова-на-Дону и других городах.</p>
-            </div> </div>
+       </div>
        <div class="mini-gallery">
             <ul>
                 <li><img src="/assets/images/mini-g1.jpg" alt=""></li>
@@ -207,5 +216,9 @@
          <div class="logo">ГКОУ РО "Ростовская специальная школа-интернат №48"</div>
     </footer>
 
+
+    <script>
+       init();
+    </script>
 </body>
 </html>
