Layout for news article

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <title>ГКОУ РО "Ростовская специальная школа-интернат №48"</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <link rel="stylesheet" href="/assets/styles/main.css">
-    <link rel="stylesheet" href="/assets/styles/slider.css">
-    <link rel="stylesheet" href="/assets/styles/slider_jq.css">
-    <script src="/assets/js/jquery-3.2.1.js"></script>
+    <script src="/assets/js/badeye.js"></script>
 
 </head>
 
@@ -16,17 +13,17 @@
     <header>
     <div class="badeye" id="badeye">
 
-    <button id="font_normal" class="btn"> </button>
+    <button id="font_normal" class="btn" onclick="Normal()"> </button>
 
-    <button id="font_middle" class="btn"></button>
+    <button id="font_middle" class="btn" onclick="Middle()"></button>
 
-    <button id="font_big" class="btn"></button>
+    <button id="font_big" class="btn" onclick="Big()"></button>
 
-    <div class="w-b"><label class="label">Фон</label><button id="fon-color" class="btn">чёрный</button></div>
+    <div class="w-b"><label class="label">Фон</label><button id="fon-color" class="btn" onclick="Black()">чёрный</button></div>
 
-    <div class="h-s"><label class="label">Изображения</label><button id="hide-img" class="btn">скрыть</button></div>
+    <div class="h-s"><label class="label">Изображения</label><button id="hide-img" class="btn" onclick="Hide()">скрыть</button></div>
 
-    <button id="back" class="btn">к обычной версии</button>
+    <button id="back" class="btn" onclick="Back()">к обычной версии</button>
 
 </div>
 
@@ -114,27 +111,7 @@
 
 
    <main class="contacts">
-
 <h1>Контакты</h1>
-
-    <div class="slider-jq">
-
-        <img src="/assets/images/cats/cat1.jpeg"  alt="" class="">
-        <img src="/assets/images/cats/cat2.jpeg"  alt="" class="">
-        <img src="/assets/images/cats/cat3.jpeg"  alt="" class="">
-        <img src="/assets/images/cats/cat4.jpeg"  alt="" class="">
-        <img src="/assets/images/cats/cat5.jpeg"  alt="" class="">
-        <img src="/assets/images/cats/cat6.jpeg"  alt="" class="">
-
-
-
-        <div class="button">
-            <div class="button_back"></div>
-            <div class="button_forward"></div>
-        </div>
-    </div>
-    <script src="/assets/js/jq_slider.js"></script>
-
 </main>
 
     <footer>
@@ -215,9 +192,6 @@
          <div class="logo">ГКОУ РО "Ростовская специальная школа-интернат №48"</div>
     </footer>
 
-
-
-    <script src="/assets/js/badeye.js"></script>
 
     <script>
        init();
