--- a/tests/index.html
+++ b/tests/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <title>ГКОУ РО "Ростовская специальная школа-интернат №48"</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <link rel="stylesheet" href="/assets/styles/main.css">
-    <link rel="stylesheet" href="/assets/styles/slider.css">
-    <link rel="stylesheet" href="/assets/styles/slider_jq.css">
-    <script src="/assets/js/jquery-3.2.1.js"></script>
+    <script src="/assets/js/badeye.js"></script>
 
 </head>
 
@@ -16,17 +13,17 @@
     <header>
     <div class="badeye" id="badeye">
 
-    <button id="font_normal" class="btn"> </button>
+    <button id="font_normal" class="btn" onclick="Normal()"> </button>
 
-    <button id="font_middle" class="btn"></button>
+    <button id="font_middle" class="btn" onclick="Middle()"></button>
 
-    <button id="font_big" class="btn"></button>
+    <button id="font_big" class="btn" onclick="Big()"></button>
 
-    <div class="w-b"><label class="label">Фон</label><button id="fon-color" class="btn">чёрный</button></div>
+    <div class="w-b"><label class="label">Фон</label><button id="fon-color" class="btn" onclick="Black()">чёрный</button></div>
 
-    <div class="h-s"><label class="label">Изображения</label><button id="hide-img" class="btn">скрыть</button></div>
+    <div class="h-s"><label class="label">Изображения</label><button id="hide-img" class="btn" onclick="Hide()">скрыть</button></div>
 
-    <button id="back" class="btn">к обычной версии</button>
+    <button id="back" class="btn" onclick="Back()">к обычной версии</button>
 
 </div>
 
@@ -184,11 +181,9 @@
             <img  src="/assets/images/you.jpg"  width="200" height="250"><br />
 
            <div class="you-are"></div>
-           <!-- <div><a href="" id="B1" class="button">Результат</a></div>-->
 
-
-            <input type="button" class="button" align="left" value="Результат" name="B1" id="B1">
-           <input type="reset" class="button" align="right" value="Сброс" name="B2" id="B2">
+            <input type="button" align="left" value="Результат" name="B1" id="B1">
+            <input type="reset" align="right" value="Сброс" name="B2" id="B2">
 
         </div>
     </form>
@@ -273,9 +268,6 @@
          <div class="logo">ГКОУ РО "Ростовская специальная школа-интернат №48"</div>
     </footer>
 
-
-
-    <script src="/assets/js/badeye.js"></script>
 
     <script>
        init();
