--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="/assets/styles/main.css">
     <script src="/assets/js/badeye.js"></script>
+    <script src="/assets/js/jquery-3.2.1.min.js"></script>
 
 </head>
 
@@ -111,7 +112,11 @@
 </header>
 
 
-       <main>
+   <!--<div class="back_colorbox"></div>-->
+<div class="big_img_colorbox"><img src="" alt=""></div>
+    <main>
+
+
         <div class="note">
 
                 <p>  Ростовская школа-интернат была открыта 1   сентября 1950 года на основании решения №951 от 03 августа 1950 г. Исполнительного комитета Ростовского-на-Дону городского Совета депутатов трудящихся как школа-интернат для глухонемых детей.
@@ -136,14 +141,15 @@
        </div>
        <div class="mini-gallery">
             <ul>
-                <li><img src="/assets/images/mini-g1.jpg" alt=""></li>
-                <li><img src="/assets/images/mini-g2.jpg" alt=""></li>
-                <li><img src="/assets/images/mini-g3.jpg" alt=""></li>
-                <li><img src="/assets/images/mini-g4.jpg" alt=""></li>
-                <li><img src="/assets/images/mini-g5.jpg" alt=""></li>
-                <li><img src="/assets/images/mini-g6.jpg" alt=""></li>
+                <li><a href="/assets/images/mini-g1.jpg" class="show_big"><img src="/assets/images/mini-g1.jpg" alt=""></a></li>
+                <li><a href="/assets/images/mini-g2.jpg" class="show_big"><img src="/assets/images/mini-g2.jpg" alt=""></a></li>
+                <li><a href="/assets/images/mini-g3.jpg" class="show_big"><img src="/assets/images/mini-g3.jpg" alt=""></a></li>
+                <li><a href="/assets/images/mini-g4.jpg" class="show_big"><img src="/assets/images/mini-g4.jpg" alt=""></a></li>
+                <li><a href="/assets/images/mini-g5.jpg" class="show_big"><img src="/assets/images/mini-g5.jpg" alt=""></a></li>
+                <li><a href="/assets/images/mini-g6.jpg" class="show_big"><img src="/assets/images/mini-g6.jpg" alt=""></a></li>
             </ul>
         </div>
+        <script src="/assets/js/colorbox.js"></script>
     </main>
 
 
