--- a/contacts/index.html
+++ b/contacts/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="/assets/styles/slider_jq.css">
     
 
-
-
     <script src="/assets/js/jquery-3.2.1.min.js"></script>
 
 </head>
@@ -214,7 +212,7 @@
          <div class="logo">ГКОУ РО "Ростовская специальная школа-интернат №48"</div>
     </footer>
 
-
+    <script src="/assets/js/badeye.js"></script>
     <script>
        init();
     </script>
