--- a/tests/index.html
+++ b/tests/index.html
@@ -11,8 +11,6 @@
 
     
 
-
-
     <script src="/assets/js/jquery-3.2.1.min.js"></script>
 
 </head>
@@ -268,7 +266,7 @@
          <div class="logo">ГКОУ РО "Ростовская специальная школа-интернат №48"</div>
     </footer>
 
-
+    <script src="/assets/js/badeye.js"></script>
     <script>
        init();
     </script>
