fix css for colorbox blocks

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -101,7 +101,6 @@
 
 
     <div class="tobadeye" id="tobadeye"></div>
-   <!-- <div class="eye"><a href="#">Версия для слабовидящих</a> </div>-->
 
       
 
@@ -191,7 +190,7 @@
          <div class="logo">ГКОУ РО "Ростовская специальная школа-интернат №48"</div>
     </footer>
 
-    <script src="/assets/js/badeye.js"></script>
+    <!--<script src="/assets/js/badeye.js"></script>-->
     <script>
        init();
     </script>
