--- a/contacts/index.html
+++ b/contacts/index.html
@@ -103,7 +103,6 @@
 
 
     <div class="tobadeye" id="tobadeye"></div>
-   <!-- <div class="eye"><a href="#">Версия для слабовидящих</a> </div>-->
 
       
 
@@ -214,7 +213,7 @@
          <div class="logo">ГКОУ РО "Ростовская специальная школа-интернат №48"</div>
     </footer>
 
-    <script src="/assets/js/badeye.js"></script>
+    <!--<script src="/assets/js/badeye.js"></script>-->
     <script>
        init();
     </script>
