--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
 
 
     <div class="tobadeye" id="tobadeye"></div>
-   <!-- <div class="eye"><a href="#">Версия для слабовидящих</a> </div>-->
 
       
         <div class="hero">
@@ -120,7 +119,10 @@
 </header>
 
 
-       <main>
+   <div class="back_colorbox"> </div>
+<div class="big_img_colorbox"> <img src="" alt=""> </div>
+
+    <main>
         <div class="note">
 
                 <p>  Ростовская школа-интернат была открыта 1   сентября 1950 года на основании решения №951 от 03 августа 1950 г. Исполнительного комитета Ростовского-на-Дону городского Совета депутатов трудящихся как школа-интернат для глухонемых детей.
@@ -131,13 +133,13 @@
                     <br />
                 </p>
                     <br />
-            <blockquote>
+
                     &nbsp; &nbsp; <b>Образовательное учреждение дает основное общее образование </b>
-                    <b><span style="line-height: 18px;">по двум уровням: начальное общее образование - 2 уровень; основное общее
-                        образование - 3 уровень</span></b>.
+                    <b>по двум уровням: начальное общее образование - 2 уровень; основное общее
+                        образование - 3 уровень</b>.
                     Форма обучения - очная. Нормативные сроки обучения: 10-11 лет.
                     Для воспитанников организовано 6-ти разовое питание, для приходящих обучающихся 2-х разовое.
-            </blockquote>
+
 
                 <cite>Преподавание ведётся на русском языке.</cite>
 
@@ -186,8 +188,7 @@
 
     </main>
 
-<div class="back_colorbox"></div>
-<div class="big_img_colorbox"><img src="" alt=""></div>
+
 
     <footer>
          <nav class="menu-bottom">
@@ -267,7 +268,7 @@
          <div class="logo">ГКОУ РО "Ростовская специальная школа-интернат №48"</div>
     </footer>
 
-    <script src="/assets/js/badeye.js"></script>
+    <!--<script src="/assets/js/badeye.js"></script>-->
     <script>
        init();
     </script>
