fix plugin badeye.js

--- a/404.html
+++ b/404.html
@@ -208,7 +208,7 @@
          <div class="logo">ГКОУ РО "Ростовская специальная школа-интернат №48"</div>
     </footer>
 
-    <!--<script src="/assets/js/badeye.js"></script>-->
+    <script src="/assets/js/badeye.js"></script>
     <script>
        init();
     </script>
