some css transform and hover for menu and submenu

--- a/information/index.html
+++ b/information/index.html
@@ -217,7 +217,7 @@
                 oldNum = pal;
             }
 
-            document.querySelector('.answer').innerHTML = `<p> в указанном диапазоне обнаружены следующие палиндромы: ${arr.join(";")} </p>`;
+            document.querySelector('.answer').innerHTML = '<p> в указанном диапазоне обнаружены следующие палиндромы:<pre>' + arr.join("<br />") + '</pre></p>';
         }
 
 
