adaptive menu begining

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 </div>
 
+    <div class="mobile-menu-toggle"><span></span></div>
+
      <nav class="menu-top">
      <ul>
     
@@ -101,6 +103,7 @@
       </ul>
  </nav>
 <div class="sand_button"></div>
+ <script src="/assets/js/adaptive_menu.js"></script>
 
     <div class="tobadeye" id="tobadeye"></div>
 
@@ -256,6 +259,7 @@
       </ul>
  </nav>
 <div class="sand_button"></div>
+ <script src="/assets/js/adaptive_menu.js"></script>
         <div class="social">
             <ul>
                 <li><a href="#"></a></li>
