--- a/information/index.html
+++ b/information/index.html
@@ -33,6 +33,8 @@
 
 </div>
 
+    <div class="mobile-menu-toggle"><span></span></div>
+
      <nav class="menu-top">
      <ul>
     
@@ -99,6 +101,7 @@
       </ul>
  </nav>
 <div class="sand_button"></div>
+ <script src="/assets/js/adaptive_menu.js"></script>
 
     <div class="tobadeye" id="tobadeye"></div>
 
@@ -314,6 +317,7 @@ a-mar@yandex.ru</p>
       </ul>
  </nav>
 <div class="sand_button"></div>
+ <script src="/assets/js/adaptive_menu.js"></script>
         <div class="social">
             <ul>
                 <li><a href="#"></a></li>
